force-app/main/default/objects/EYI_Cancellation_Detail__c/EYI_Cancellation_Detail__c.object-meta.xml
<CustomObject>
    <label>Cancellation Detail</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Cancellation Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancellation Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>