force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank of Baroda</fullName>
            </value>
            <value>
                <fullName>Bank of India</fullName>
            </value>
            <value>
                <fullName>Bank of Maharashtra</fullName>
            </value>
            <value>
                <fullName>Canara Bank</fullName>
            </value>
            <value>
                <fullName>Central Bank of India</fullName>
            </value>
            <value>
                <fullName>Indian Bank</fullName>
            </value>
            <value>
                <fullName>Indian Overseas Bank</fullName>
            </value>
            <value>
                <fullName>Punjab and Sind Bank</fullName>
            </value>
            <value>
                <fullName>Punjab National Bank</fullName>
            </value>
            <value>
                <fullName>State Bank of India</fullName>
            </value>
            <value>
                <fullName>UCO Bank</fullName>
            </value>
            <value>
                <fullName>Union Bank of India</fullName>
            </value>
            <value>
                <fullName>Axis Bank</fullName>
            </value>
            <value>
                <fullName>Bandhan Bank</fullName>
            </value>
            <value>
                <fullName>CSB Bank</fullName>
            </value>
            <value>
                <fullName>City Union Bank</fullName>
            </value>
            <value>
                <fullName>DCB Bank&lt;/option</fullName>
            </value>
            <value>
                <fullName>Dhanlaxmi Bank</fullName>
            </value>
            <value>
                <fullName>Federal Bank</fullName>
            </value>
            <value>
                <fullName>HDFC Bank</fullName>
            </value>
            <value>
                <fullName>ICICI Bank</fullName>
            </value>
            <value>
                <fullName>IDBI Bank</fullName>
            </value>
            <value>
                <fullName>IDFC First Bank</fullName>
            </value>
            <value>
                <fullName>IndusInd Bank</fullName>
            </value>
            <value>
                <fullName>Jammu &amp;amp; Kashmir Bank</fullName>
            </value>
            <value>
                <fullName>Karnataka Bank</fullName>
            </value>
            <value>
                <fullName>Karur Vysya Bank</fullName>
            </value>
            <value>
                <fullName>Kotak Mahindra Bank</fullName>
            </value>
            <value>
                <fullName>Nainital Bank</fullName>
            </value>
            <value>
                <fullName>RBL Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>