force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Account_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_Account_No__c</fullName>
    <label>Account No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>