force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Amount_be_Forfeited__c.field-meta.xml
<CustomField>
    <fullName>EYI_Amount_be_Forfeited__c</fullName>
    <label>Amount be Forfeited</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>