force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Amount_to_Cust_of_Other_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>EYI_Amount_to_Cust_of_Other_Adjustment__c</fullName>
    <label>Amount to Customer of Other Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>