force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Bank_Name__c</fullName>
    <label>Other Bank Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>