force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Brokerage_Waiver__c.field-meta.xml
<CustomField>
    <fullName>EYI_Brokerage_Waiver__c</fullName>
    <label>Brokerage Waiver</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>