force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Cancellation_Commencement__c.field-meta.xml
<CustomField>
    <fullName>EYI_Cancellation_Commencement__c</fullName>
    <label>Cancellation Commencement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Booking</fullName>
            </value>
            <value>
                <fullName>On EOI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>