force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>EYI_Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial Inability</fullName>
            </value>
            <value>
                <fullName>No Further Interest in Transaction</fullName>
            </value>
            <value>
                <fullName>Legal or Title Issues</fullName>
            </value>
            <value>
                <fullName>Failure to Agree on Terms/Conditions</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Delays in Registraiton</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Retained</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>