force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Cancellation_Remarks__c.field-meta.xml
<CustomField>
    <fullName>EYI_Cancellation_Remarks__c</fullName>
    <label>Cancellation Remarks</label>
    <type>TextArea</type>
</CustomField>