force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Cancellation_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Cancellation_Status__c</fullName>
    <label>Cancellation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inprogress</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Retained</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>