force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Cancellation_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Cancellation_Type__c</fullName>
    <label>Cancellation type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voluntary</fullName>
            </value>
            <value>
                <fullName>Involuntary</fullName>
            </value>
            <value>
                <fullName>Legal Compliance</fullName>
            </value>
            <value>
                <fullName>Management initiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>