force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Case__c.field-meta.xml
<CustomField>
    <fullName>EYI_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cancellation Details</relationshipLabel>
    <relationshipName>Cancellation_Details</relationshipName>
    <type>Lookup</type>
</CustomField>