force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Cheque__c.field-meta.xml
<CustomField>
    <fullName>EYI_Cheque__c</fullName>
    <label>Cheque</label>
    <length>20</length>
    <type>Text</type>
</CustomField>