force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Date_of_Cancellation_initiated__c.field-meta.xml
<CustomField>
    <fullName>EYI_Date_of_Cancellation_initiated__c</fullName>
    <label>Date of Cancellation initiated</label>
    <type>Date</type>
</CustomField>