force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Demand_Amount_Charged_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>EYI_Demand_Amount_Charged_to_Customer__c</fullName>
    <label>Demand Amount Charged to Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>