force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Forfeit_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Forfeit_Amount__c</fullName>
    <label>Forfeit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>