force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_IFSC_Code__c</fullName>
    <label>IFSC Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>