force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Instrument_Details__c.field-meta.xml
<CustomField>
    <fullName>EYI_Instrument_Details__c</fullName>
    <label>Instrument Details</label>
    <length>20</length>
    <type>Text</type>
</CustomField>