force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>EYI_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cancellation Details</relationshipLabel>
    <relationshipName>Cancellation_Details</relationshipName>
    <type>Lookup</type>
</CustomField>