force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Other_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>EYI_Other_Adjustments__c</fullName>
    <label>Other Adjustments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>