force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Other_Adjustments_Included__c.field-meta.xml
<CustomField>
    <fullName>EYI_Other_Adjustments_Included__c</fullName>
    <label>Other Adjustments Included</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>