force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Refund_Amount_Principal__c.field-meta.xml
<CustomField>
    <fullName>EYI_Refund_Amount_Principal__c</fullName>
    <label>Refund Amount - Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>