force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Retained_by_User__c.field-meta.xml
<CustomField>
    <fullName>EYI_Retained_by_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retained by User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cancellation_Details</relationshipName>
    <type>Lookup</type>
</CustomField>