force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Retention_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Retention_Date__c</fullName>
    <label>Retention Date</label>
    <type>Date</type>
</CustomField>