force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Retention_Enablers__c.field-meta.xml
<CustomField>
    <fullName>EYI_Retention_Enablers__c</fullName>
    <label>Retention Enablers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interest Waiver</fullName>
            </value>
            <value>
                <fullName>Payment Deviation</fullName>
            </value>
            <value>
                <fullName>Payment Extension</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>