force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Reversal_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>EYI_Reversal_to_Customer__c</fullName>
    <label>Reversal to Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>