force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Total_Interest_Accured__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_Interest_Accured__c</fullName>
    <label>Total Interest Accured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>