force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_Total_Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_Received_Amount__c</fullName>
    <label>Total Received Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>