force-app/main/default/objects/EYI_Cancellation_Detail__c/fields/EYI_TotalAmountCharged__c.field-meta.xml
<CustomField>
    <fullName>EYI_TotalAmountCharged__c</fullName>
    <label>TotalAmountCharged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>